Fix broken css

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1133,11 +1133,13 @@ h2.page-title {
     from {
     	-webkit-transform: rotate(0deg);
     	-moz-transform: rotate(0deg);
+    	-o-transform: rotate(0deg);
     	transform: scale(1) rotate(0deg);
     }
     to {
     	-webkit-transform: rotate(360deg);
     	-moz-transform: rotate(360deg);
+    	-o-transform: rotate(360deg);
     	transform: scale(1) rotate(360deg);
     }
 }
@@ -1146,11 +1148,13 @@ h2.page-title {
     from {
     	-webkit-transform: rotate(0deg);
     	-moz-transform: rotate(0deg);
+    	-o-transform: rotate(0deg);
     	transform: scale(1) rotate(0deg);
     }
     to {
     	-webkit-transform: rotate(360deg);
     	-moz-transform: rotate(360deg);
+    	-o-transform: rotate(360deg);
     	transform: scale(1) rotate(360deg);
     }
 }
@@ -1159,11 +1163,13 @@ h2.page-title {
     from {
     	-webkit-transform: rotate(0deg);
     	-moz-transform: rotate(0deg);
+    	-o-transform: rotate(0deg);
     	transform: scale(1) rotate(0deg);
     }
     to {
     	-webkit-transform: rotate(360deg);
     	-moz-transform: rotate(360deg);
+    	-o-transform: rotate(360deg);
     	transform: scale(1) rotate(360deg);
     }
 }
@@ -2030,9 +2036,11 @@ $header-height: 6rem;
 /* DROPDOWN CARET
 ------------------------------ */
 .caret-up {
-  -ms-transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	transform: rotate(180deg);
 }
 
 
